--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="styles.css">
+	<link rel="shortcut icon" href="src/ico/share-alt-solid-48.ico" type="image/x-icon">
 	<script src="scripts.js" defer></script>
 	<title>Invitation</title>
 </head>
