--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 	<link rel="stylesheet" href="styles.css">
 	<link rel="shortcut icon" href="src/ico/share-icon.ico" type="image/x-icon">
 	<script src="scripts.js" defer></script>
-	<title>Invitation</title>
+	<title>FGHSSMP Invitation</title>
 </head>
 <body>
+	<div class="bg"></div>
 	<div class="container"></div>
 </body>
 </html>
