--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
 	<div class="bg"></div>
-	<div class="container"></div>
+	<div class="container">
+		<div class="message">You've been invited to the School-Wide FGHSSMP server! Would you like to join?</div>
+	</div>
 </body>
 </html>
