--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
 	<link rel="stylesheet" href="styles.css">
 	<link rel="shortcut icon" href="src/ico/share-icon.ico" type="image/x-icon">
 	<script src="scripts.js" defer></script>
-	<title>FGHSSMP Invitation</title>
+	<title>FGHS SMP Invitation</title>
 </head>
 <body>
 	<div class="bg"></div>
 	<div class="container">
-		<div class="message">You've been invited to the School-Wide FGHSSMP server! Would you like to join?</div>
+		<div class="message">You've been invited to the School-Wide SMP server!</div>
+		<div class="buttons">
+			<button class="choose">Sign up / Join</button>
+			<!-- <button class="choose">Decline</button> -->
+		</div>
 	</div>
 </body>
 </html>
