--- a/index.html
+++ b/index.html
@@ -12,10 +12,20 @@
 <body>
 	<div class="bg"></div>
 	<div class="container">
-		<div class="message">You've been invited to the School-Wide SMP server!</div>
-		<div class="buttons">
-			<button class="choose">Sign up / Join</button>
-			<!-- <button class="choose">Decline</button> -->
+		<div class="firstscreen">
+			<div class="message">You've been invited to the School-Wide SMP server!</div>
+			<div class="buttons">
+				<button class="choose" id="confirm">Sign up / Join</button>
+				<!-- <button class="choose">Decline</button> -->
+			</div>
+		</div>
+		<div class="signup">
+			<div class="message">Sign up</div>
+			<form method="post" action="https://script.googleapis.com/v1/scripts/AKfycbw4F2gDoVbJFL4b9VB-5nC_v04kFAUqjkE6s37Ru5d-BqcxlWBMJU8eFCeHUXkl1qOFEQ:run">
+				<input name="Email" type="email" placeholder="Email" required>
+				<input name="Username/Gamertag" type="text" placeholder="Name" required>
+				<button type="submit">Send</button>
+			</form>
 		</div>
 	</div>
 </body>
