--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="styles.css">
 	<link rel="shortcut icon" href="src/ico/share-icon.ico" type="image/x-icon">
+	<script src="https://apis.google.com/js/platform.js" async defer></script>
+	<meta name="google-signin-client_id" content="646347989966-s7pgikch683c45288ga90l50oetjru6h.apps.googleusercontent.com">
 	<script src="scripts.js" defer></script>
 	<title>FGHS SMP Invitation</title>
 </head>
@@ -24,6 +26,7 @@
 			<form method="post" action="https://script.googleapis.com/v1/scripts/AKfycbw4F2gDoVbJFL4b9VB-5nC_v04kFAUqjkE6s37Ru5d-BqcxlWBMJU8eFCeHUXkl1qOFEQ:run">
 				<input name="Email" type="email" placeholder="Email" required>
 				<input name="Username/Gamertag" type="text" placeholder="Name" required>
+				<div class="g-signin2" data-onsuccess="onSignIn"></div>
 				<button type="submit">Send</button>
 			</form>
 		</div>
