--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div class="bg"></div>
 	<div class="container">
 		<div class="firstscreen">
-			<div class="message">You've been invited to the School-Wide SMP server!</div>
+			<div class="message">Would you like to join the SMP for the Forest Grove High School?</div>
 			<div class="buttons">
 				<button class="choose" id="confirm">Sign up / Join</button>
 				<!-- <button class="choose">Decline</button> -->
@@ -23,10 +23,10 @@
 		</div>
 		<div class="signup">
 			<div class="message">Sign up</div>
-			<form method="post" action="https://script.googleapis.com/v1/scripts/AKfycbw4F2gDoVbJFL4b9VB-5nC_v04kFAUqjkE6s37Ru5d-BqcxlWBMJU8eFCeHUXkl1qOFEQ:run">
+			<form method="post" action="https://script.google.com/macros/s/AKfycbzjY18bGgaKaJfOGkWQdpg6hoEAXBQ8BpJGxHgqH1pZWfRwSdSIabHOQpwwvR385htihA/exec">
 				<input name="Email" type="email" placeholder="Email" required>
 				<input name="Username/Gamertag" type="text" placeholder="Name" required>
-				<div class="g-signin2" data-onsuccess="onSignIn"></div>
+				<!-- <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
 				<button type="submit">Send</button>
 			</form>
 		</div>
