--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="styles.css">
 	<link rel="shortcut icon" href="src/ico/share-icon.ico" type="image/x-icon">
-	<script src="https://apis.google.com/js/platform.js" async defer></script>
-	<meta name="google-signin-client_id" content="646347989966-s7pgikch683c45288ga90l50oetjru6h.apps.googleusercontent.com">
+	<!-- <script src="https://apis.google.com/js/platform.js" async defer></script>
+	<meta name="google-signin-client_id" content="646347989966-s7pgikch683c45288ga90l50oetjru6h.apps.googleusercontent.com"> -->
 	<script src="scripts.js" defer></script>
 	<title>FGHS SMP Invitation</title>
 </head>
