--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div class="message">Sign up</div>
 			<form method="post" action="https://script.google.com/macros/s/AKfycbzjY18bGgaKaJfOGkWQdpg6hoEAXBQ8BpJGxHgqH1pZWfRwSdSIabHOQpwwvR385htihA/exec">
 				<input name="Email" type="email" placeholder="Email" required>
-				<input name="Username/Gamertag" type="text" placeholder="Name" required>
+				<input name="Username" type="text" placeholder="Username/Gamertag" required>
 				<!-- <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
 				<button type="submit">Send</button>
 			</form>
