--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 		</div>
 		<div class="signup">
 			<div class="message">Sign up</div>
-			<form method="post" action="https://script.google.com/macros/s/AKfycbzjY18bGgaKaJfOGkWQdpg6hoEAXBQ8BpJGxHgqH1pZWfRwSdSIabHOQpwwvR385htihA/exec">
-				<input name="Email" type="email" placeholder="Email" required>
+			<form class="form" method="post" action="https://script.google.com/macros/s/AKfycbzjY18bGgaKaJfOGkWQdpg6hoEAXBQ8BpJGxHgqH1pZWfRwSdSIabHOQpwwvR385htihA/exec">
+				<input name="Email" type="email" placeholder="School Email" required>
 				<input name="Username" type="text" placeholder="Username/Gamertag" required>
 				<!-- <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
-				<button type="submit">Send</button>
+				<button type="submit">Next</button>
 			</form>
 		</div>
 	</div>
