--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</div>
 		<div class="signup">
 			<div class="message">Sign up</div>
-			<form class="form" method="post" action="https://script.google.com/macros/s/AKfycbzjY18bGgaKaJfOGkWQdpg6hoEAXBQ8BpJGxHgqH1pZWfRwSdSIabHOQpwwvR385htihA/exec">
+			<form class="form" method="post" action="https://script.googleapis.com/v1/scripts/AKfycbzjY18bGgaKaJfOGkWQdpg6hoEAXBQ8BpJGxHgqH1pZWfRwSdSIabHOQpwwvR385htihA:run?key=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">
 				<input name="Email" type="email" placeholder="School Email" required>
 				<input name="Username" type="text" placeholder="Username/Gamertag" required>
 				<!-- <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
