--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 		<div class="signup">
 			<div class="message">Sign up</div>
 			<form class="form" method="post" action="https://script.google.com/macros/s/AKfycbxOboZqDKsKlvBms8eVRjANfCYqU_v1G-Coq4lOQVDCkJTYG99A0NKSmTABHsDnxc2fzg/exec">
-				<input name="Email" type="email" placeholder="School Email" required>
-				<input name="Username" type="text" placeholder="Username/Gamertag" required>
+				<input name="Email" type="email" placeholder="School Email" autocomplete="on" required>
+				<input name="Username" type="text" placeholder="Microsoft gamertag" autocomplete="off" required>
 				<!-- <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
-				<button type="submit">Next</button>
+				<button type="submit"><span>Next</span></button>
 			</form>
 		</div>
 	</div>
