--- a/index.html
+++ b/index.html
@@ -6,19 +6,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="styles.css">
 	<link rel="shortcut icon" href="src/ico/share-icon.ico" type="image/x-icon">
-	<!-- <script src="https://apis.google.com/js/platform.js" async defer></script>
-	<meta name="google-signin-client_id" content="646347989966-s7pgikch683c45288ga90l50oetjru6h.apps.googleusercontent.com"> -->
 	<script src="scripts.js" defer></script>
 	<title>FGHS SMP Invitation</title>
 </head>
 <body>
 	<div class="bg"></div>
+	<div id="notificationBadge"></div>
 	<div class="container">
 		<div class="firstscreen">
 			<div class="message">Would you like to join the SMP for the Forest Grove High School?</div>
 			<div class="buttons">
 				<button class="choose" id="confirm">Sign up / Join</button>
-				<!-- <button class="choose">Decline</button> -->
 			</div>
 		</div>
 		<div class="signup">
@@ -26,8 +24,7 @@
 			<form class="form" method="post" action="https://script.google.com/macros/s/AKfycbxOboZqDKsKlvBms8eVRjANfCYqU_v1G-Coq4lOQVDCkJTYG99A0NKSmTABHsDnxc2fzg/exec">
 				<input name="Email" type="email" placeholder="School Email" autocomplete="on" required>
 				<input name="Username" type="text" placeholder="Microsoft gamertag" autocomplete="off" required>
-				<!-- <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
-				<button type="submit"><span>Next</span></button>
+				<button type="submit"><span>Finish</span></button>
 			</form>
 		</div>
 	</div>
