--- a/index.html
+++ b/index.html
@@ -24,8 +24,15 @@
 			<form class="form" method="post" action="https://script.google.com/macros/s/AKfycbxOboZqDKsKlvBms8eVRjANfCYqU_v1G-Coq4lOQVDCkJTYG99A0NKSmTABHsDnxc2fzg/exec">
 				<input name="Email" type="email" placeholder="School Email" autocomplete="on" required>
 				<input name="Username" type="text" placeholder="Microsoft gamertag" autocomplete="off" required>
-				<button type="submit"><span>Finish</span></button>
+				<button type="submit" id="signup"><span>Finish</span></button>
 			</form>
+		</div>
+		<div class="details">
+			<div class="message">Server information</div>
+			<div class="serdet">
+				<input type="text" value="fghssmp.exaroton.me" readonly data-server-info>
+				<input type="text" value="19132" readonly data-server-info>
+			</div>
 		</div>
 	</div>
 </body>
