--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 	<div id="notificationBadge"></div>
 	<div class="container">
 		<div class="firstscreen">
-			<div class="message">Would you like to join the SMP for the Forest Grove High School?</div>
+			<div class="message">You've been invited to join the FGHS Minecraft SMP!</div>
 			<div class="buttons">
 				<button class="choose" id="confirm">Sign up / Join</button>
+				<button class="choose" id="asu">Already signed up?</button>
 			</div>
 		</div>
 		<div class="signup">
