--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="styles.css">
 	<link rel="shortcut icon" href="src/ico/share-icon.ico" type="image/x-icon">
+	<meta property="og:title" content="FGHS SMP"/>
+	<meta property="og:type" content="website"/>
+	<meta property="og:description" content="Invitation to join the FGHS SMP."/>
+	<meta property="og:url" content="https://voltaicmimic431.github.io"/>
+	<meta property="og:image" content="https://voltaicmimic431.github.io/src/img/fghssmpsharelogo_n.png"/>
 	<script src="scripts.js" defer></script>
 	<title>FGHS SMP Invitation</title>
 </head>
@@ -32,7 +37,7 @@
 			<div class="message">Server information</div>
 			<div class="serdet">
 				<input type="text" value="fghssmp.exaroton.me" readonly data-server-info>
-				<input type="text" value="19132" readonly data-server-info>
+				<input type="text" value="26628" readonly data-server-info>
 			</div>
 		</div>
 	</div>
