--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<meta property="og:description" content="Invitation to join the FGHS SMP."/>
 	<meta property="og:url" content="https://voltaicmimic431.github.io"/>
 	<meta property="og:image" content="https://voltaicmimic431.github.io/src/img/fghssmpsharelogo_n.png"/>
+	<meta name="theme-color" content="#00AA00"/>
 	<script src="scripts.js" defer></script>
 	<title>FGHS SMP Invitation</title>
 </head>
