--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<form class="form" method="post" action="https://script.google.com/macros/s/AKfycbxOboZqDKsKlvBms8eVRjANfCYqU_v1G-Coq4lOQVDCkJTYG99A0NKSmTABHsDnxc2fzg/exec">
 				<input name="Email" type="email" placeholder="School Email" autocomplete="on" required>
 				<input name="Username" type="text" placeholder="Microsoft gamertag" autocomplete="off" required>
-				<button type="submit" id="signup"><span>Finish</span></button>
+				<button type="submit" id="signup">Finish</button>
 			</form>
 		</div>
 		<div class="details">
