--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 	<div class="container">
 		<h1>Hello! My name is Shane.</h1>
+		<p>I program a shit ton and I listen to music everyday. Just from that, you can probably already tell that I live on my computer 24/7. But actually, not as much as you think.</p>
 	</div>
 </body>
 </html>
