--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="container">
 		<h1>Hello! My name is Shane.</h1>
-		<p>I program a shit ton and I listen to music everyday. Just from that, you can probably already tell that I live on my computer 24/7. But actually, not as much as you think.</p>
+		<p>I write a shit ton of code in my free time. I write in Javascript, HTML, CSS, Python, Java, LUAU, and C#. All like 80% self-taught too. I don't need no goofy ahh Computer Science classes. </p>
 	</div>
 </body>
 </html>
