--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Hello! My name is Shane.</h1>
-		<p>I write a shit ton of code in my free time. I write in Javascript, HTML, CSS, Python, Java, LUAU, and C#. All like 80% self-taught too. I don't need no goofy ahh Computer Science classes. </p>
+		<h1>Hello!</h1>
+		<p>I hate Algebra.</p>
 	</div>
 </body>
 </html>
