--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="container">
 		<h1>Hello!</h1>
-		<p>I hate Algebra.</p>
+		<p>I hate Algebra and Geometry.</p>
 	</div>
 </body>
 </html>
