--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<div class="container">
 		<h1>Hello!</h1>
 		<p>I hate Algebra and Geometry.</p>
+		<img src="src/img/20221120_234507.jpg" alt="" class="me">
 	</div>
 </body>
 </html>
