--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="navbar-top tmp-center">
         <div class="wrap">
             <a href="https://voltaicmimic431.github.io/" class="tmp-nolink">
-                <div id="typewrite" class="tmp-center">voltaicmimic431.github.io<span class="lol">W.I.P.</span></div>
+                <div id="typewrite" class="tmp-center">Voltaicmimic431.github.io<span class="lol">W.I.P.</span></div>
             </a>
             <div class="right tmp-center">
                 <a href="https://discord.gg/pKNEYKYn" target="_blank"><img src="src/svg/discord.svg" class="ico"></a>
@@ -26,16 +26,9 @@
             <div class="bg tmp-center">
                 <img src="src/svg/somethin.svg" class="bg-shape" id="bg-shape">
             </div>
-            <h1>I live in your<br>mom's basement lol.</h1>
-            <h3>You may want to go check.</h3>
-            <div class="buttons"><button class="white" onclick="sts(1)">No way.. How?</button><button class="clear" onclick="sts(2)">Booooo! Think of a better "joke".</button></div>
-        </div>
-        <div class="section">
-            <h1 content-slide-in>I was kicked down the stairs by her (she mean).</h1>
-            <h3>Now I'm just chilling here, in the dark.</h3>
-        </div>
-        <div class="section">
-            <h1>no i cant think of anything else</h1>
+            <h1>We must cook,<br>Jessie.</h1>
+            <h3>I struggle to find the perfect welcome messages.</h3>
+            <div class="buttons"><button class="white" onclick="">Yessir</button><button class="clear" onclick="">Boring.</button></div>
         </div>
     </div>
 </body>
