--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <div class="bg tmp-center">
                 <img src="src/svg/somethin.svg" class="bg-shape" id="bg-shape">
             </div>
-            <h1>We must cook,<br>Jessie.</h1>
-            <h3>I struggle to find the perfect welcome messages.</h3>
+            <h1>I am<br>BORED.</h1>
+            <h3>I struggle to find good welcome messages.</h3>
             <div class="buttons"><button class="white" onclick="">Yessir</button><button class="clear" onclick="">Boring.</button></div>
         </div>
     </div>
