--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="scripts.js" defer></script>
-    <title>Home Page Or Somethin'</title>
+    <title>Idk tbh</title>
 </head>
 <body onload="stt()">
     <div id="back_to_top" class="sts_hidden" onclick="sts(0)">/\</div>
