--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <div class="bg tmp-center">
                 <img src="src/svg/somethin.svg" class="bg-shape" id="bg-shape">
             </div>
-            <h1>I am<br>BORED.</h1>
-            <h3>I struggle to find good welcome messages.</h3>
-            <div class="buttons"><button class="white" onclick="">Yessir</button><button class="clear" onclick="">Boring.</button></div>
+            <h1>I am<br>bored</h1>
+            <h3>I struggle to find good welcoming messages.</h3>
+            <div class="buttons"><button class="white" onclick="">Yessir</button><button class="clear" onclick="">Damn 🔥</button></div>
         </div>
     </div>
 </body>
