--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </a>
             <div class="right tmp-center">
                 <a href="https://discord.gg/pKNEYKYn" target="_blank"><img src="src/svg/discord.svg" class="ico"></a>
-                <a href="https://www.youtube.com/@SP.43" target="_blank"><img src="src/svg/youtube.svg" class="ico"></a>
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="src/svg/youtube.svg" class="ico"></a>
             </div>
         </div>
     </div>
@@ -26,7 +26,7 @@
             <div class="bg tmp-center">
                 <img src="src/svg/somethin.svg" class="bg-shape" id="bg-shape">
             </div>
-            <h1>I am<br>bored</h1>
+            <h1>I am tired</h1>
             <h3>I struggle to find good welcoming messages.</h3>
             <div class="buttons"><button class="white" onclick="">Yessir</button><button class="clear" onclick="">Damn 🔥</button></div>
         </div>
