--- a/index.html
+++ b/index.html
@@ -2,33 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js" defer></script>
-    <title>Idk tbh</title>
+    <script src="script.js" defer></script>
+    <title>Website</title>
 </head>
-<body onload="stt()">
-    <div id="back_to_top" class="sts_hidden" onclick="sts(0)">/\</div>
-    <div class="navbar-top tmp-center">
-        <div class="wrap">
-            <a href="https://voltaicmimic431.github.io/" class="tmp-nolink">
-                <div id="typewrite" class="tmp-center">Voltaicmimic431.github.io<span class="lol">W.I.P.</span></div>
-            </a>
-            <div class="right tmp-center">
-                <a href="https://discord.gg/pKNEYKYn" target="_blank"><img src="src/svg/discord.svg" class="ico"></a>
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="src/svg/youtube.svg" class="ico"></a>
-            </div>
-        </div>
+<body>
+    <div class="nav">
+        <button>Home</button>
+        <button>Console</button>
     </div>
+    <div class="parallax"></div>
     <div class="content">
-        <div class="section">
-            <div class="bg tmp-center">
-                <img src="src/svg/somethin.svg" class="bg-shape" id="bg-shape">
+        <div class="wrapper">
+            <h1>Placeholder</h1>
+            <div class="section">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates fuga, impedit odit eveniet facilis atque amet magni cupiditate officiis repellat. Eius, officia quae deleniti aperiam assumenda a placeat eaque mollitia magnam ratione vitae officiis nobis.
+                <br><br><span class="code">document.onclick = (ev) => {console.log(`x: ${ev.x}, y: ${ev.y}`)}</span><br><br>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis perspiciatis possimus at earum quae, corporis eligendi atque molestiae dicta nobis doloremque impedit!
             </div>
-            <h1>I am tired</h1>
-            <h3>I struggle to find good welcoming messages.</h3>
-            <div class="buttons"><button class="white" onclick="">Yessir</button><button class="clear" onclick="">Damn 🔥</button></div>
+            <h1>Section 2</h1>
+            <div class="codeBlock" page-layout-output-html></div>
+            <div class="section">
+                Lorem ipsum dolor sit amet? Lorem ipsum dolor sit? Get started now!
+            </div>
         </div>
     </div>
 </body>
