--- a/index.html
+++ b/index.html
@@ -8,25 +8,6 @@
     <title>Website</title>
 </head>
 <body>
-    <div class="nav">
-        <button>Home</button>
-        <button>Console</button>
-    </div>
-    <div class="parallax"></div>
-    <div class="content">
-        <div class="wrapper">
-            <h1>Placeholder</h1>
-            <div class="section">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates fuga, impedit odit eveniet facilis atque amet magni cupiditate officiis repellat. Eius, officia quae deleniti aperiam assumenda a placeat eaque mollitia magnam ratione vitae officiis nobis.
-                <br><br><span class="code">document.onclick = (ev) => {console.log(`x: ${ev.x}, y: ${ev.y}`)}</span><br><br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis perspiciatis possimus at earum quae, corporis eligendi atque molestiae dicta nobis doloremque impedit!
-            </div>
-            <h1>Section 2</h1>
-            <div class="codeBlock" page-layout-output-html></div>
-            <div class="section">
-                Lorem ipsum dolor sit amet? Lorem ipsum dolor sit? Get started now!
-            </div>
-        </div>
-    </div>
+    <h1>Fresh website</h1>
 </body>
 </html>
