--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
-    <title>Some website</title>
+    <title>Collaborative Github Page</title>
 </head>
 <body>
     <div id="welcome">Welcome</div>
