update index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Collaborative Github Page</title>
 </head>
 <body>
+    <div id="burger">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+    <div id="nav">
+        
+    </div>
     <div id="welcome">Welcome</div>
 </body>
 </html>
