--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div></div>
     </div>
     <div id="nav">
-        
+        <a href="#">Game</a>
     </div>
     <div id="welcome">Welcome</div>
 </body>
