--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <script src="script.js" defer></script>
     <title>Collaborative Github Page</title>
 </head>
-<body>
+<body noise>
     <div id="burger">
         <div></div>
         <div></div>
         <div></div>
     </div>
     <div id="nav">
-        <a href="#">Game</a>
+        <div class="navcontent">
+            <header>Page links</header>
+            <a href="./game.html">Game</a>
+        </div>
     </div>
     <div id="welcome">Welcome</div>
 </body>
