--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
         </div>
         <div class="section" id="graph3">
             <div class="wrapper">
-                <h1 class="title">Graph 3: Incentives</h1>
+                <h1 class="title">Graph 3: AD & AS</h1>
             </div>
         </div>
         <div class="section" id="graph4" style="background:rgb(98, 0, 255);">
             <!-- <img src="./src/svg/purple-top.svg" class="waveTop"> -->
             <div class="wrapper">
-                <h1 class="title">Graph 4: Scarcity</h1>
+                <h1 class="title">Graph 4: Phillips Curve</h1>
             </div>
         </div>
     </div>
