--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                     <a href="#concept10">Concept 10: Production</a>
                     <a href="#graph1">Graph 1: Supply & Demand</a>
                     <a href="#graph2">Graph 2: Foreign Exchange</a>
-                    <a href="#graph3">Graph 3: UNDECIDED</a>
-                    <a href="#graph4">Graph 4: UNDECIDED</a>
+                    <a href="#graph3">Graph 3: AD & AS</a>
+                    <a href="#graph4">Graph 4: Phillips Curve</a>
                 </div>
             </div>
         </div>
