--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
         <div class="section" id="graph3">
             <div class="wrapper">
                 <h1 class="title">Graph 3: AD & AS</h1>
+                <img src="./src/img/graph3.png">
             </div>
         </div>
         <div class="section" id="graph4" style="background:rgb(98, 0, 255);">
