--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
             <!-- <img src="./src/svg/purple-top.svg" class="waveTop"> -->
             <div class="wrapper">
                 <h1 class="title">Graph 4: Phillips Curve</h1>
+                <img src="./src/img/graph4.png">
             </div>
         </div>
     </div>
