--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <!-- <img src="./src/svg/purple-top.svg" class="waveTop"> -->
             <div class="wrapper">
                 <h1 class="title">Graph 4: Phillips Curve</h1>
-                <img src="./src/img/graph4.png">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2GRVeDfQsgQxcYHwOBN896dMqG61u_ab0dg&s" width="600">
             </div>
         </div>
     </div>
