--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="section" id="concept1">
             <div class="wrapper">
                 <h1 class="title">Concept 1: Monopolies</h1>
-                <p>The exclusive possession or control of the supply of or trade in a commodity or service. It's basically when 1 company has complete control of the industry. In this case, Insomniac, the company that hosts EDC, is not the only company who hosts music festivals of this level.</p>
+                <p>In this case, Insomniac, the company that hosts EDC, is not the only company who hosts music festivals of this level. There are other companies like HARD presents, React presents, and Disco Donnie Presents who put on the same types of concerts.</p>
             </div>
         </div>
         <div class="section" id="concept2" style="background:rgb(0, 102, 255);">
@@ -71,13 +71,13 @@
             <img src="./src/svg/blue-bottom.svg" class="waveBottom"> -->
             <div class="wrapper">
                 <h1 class="title">Concept 2: Externalities</h1>
-                <p>A side effect or consequences of an industrial or commercial activity that affects other parties without this being reflected in the cost of the goods or services involvd. Everytime when an EDC festival is hosted, there are externalities that exist/occur such as positive ones like economic stimulus and community building. Along with negative ones like noise pollution, environmental impact, traffic congestion, and strain on public services.</p>
+                <p>Everytime when an EDC festival is hosted, there are externalities that exist/occur such as positive ones like economic stimulus and community building. Along with negative ones like noise pollution, environmental impact, traffic congestion, and strain on public services.</p>
             </div>
         </div>
         <div class="section" id="concept3">
             <div class="wrapper">
                 <h1 class="title">Concept 3: Incentives</h1>
-                <p>Anything that persuades a person/organization to alter their behavior in the desired manner; Benefit or costs of an action that influence people's decisions and behavior. EDC Las Vegas and incentives go hand in hand becuase the staff encourage recycling your trash in exchange for cool rewards. So, by doing such thing, they can persuade the attendees into recycling their trash for rewards.</p>
+                <p>EDC Las Vegas and incentives go hand in hand becuase the staff encourage recycling your trash in exchange for cool rewards. So, by doing such thing, they can persuade the attendees into recycling their trash for rewards.</p>
             </div>
         </div>
         <div class="section" id="concept4" style="background:rgb(255, 166, 0);">
@@ -85,13 +85,13 @@
             <img src="./src/svg/orange-bottom.svg" class="waveBottom"> -->
             <div class="wrapper">
                 <h1 class="title">Concept 4: Scarcity</h1>
-                <p>Scarcity is when demand for a good or service is greater than the availability of that good or service. At a music festival, scarcity exists almost everywhere. Some examples are the tickets for admittance, space/capacity at each stage, merchandise from all the artists, and the amount of bathrooms.</p>
+                <p>At a music festival, scarcity exists almost everywhere. Some examples are the tickets for admittance, space/capacity at each stage, merchandise from all the artists, and the amount of bathrooms.</p>
             </div>
         </div>
         <div class="section" id="concept5">
             <div class="wrapper">
                 <h1 class="title">Concept 5: Demand</h1>
-                <p>The quantity of a good that consumers are willing and able to purchase at various prices during a given time. EDC Las Vegas is hosted 3 days in a row at the same place, one time a year. The emand for tickets to attend are to have high demand every time.</p>
+                <p>EDC Las Vegas is hosted 3 days in a row at the same place, one time a year. The demand for tickets to attend the event are to have high demand every time as it's the biggest event of this kind.</p>
             </div>
         </div>
         <div class="section" id="concept6" style="background:rgb(98, 0, 255);">
@@ -99,13 +99,13 @@
             <img src="./src/svg/purple-bottom.svg" class="waveBottom"> -->
             <div class="wrapper">
                 <h1 class="title">Concept 6: Opportunity Cost</h1>
-                <p>The loss of potential gain from other alternatives when one alternative is chosen. When you're going to a music festival like EDC Las Vegas, you can't see all artists at all stages in 3 days. So, you have to choose wisely who you will go see. For example, 3 DJs you like are playing right now at 3 different stages and you can only choose one of them to go see.</p>
+                <p>When you're going to a music festival like EDC Las Vegas, you can't see all artists at all 8 stages in 3 days. So, you have to choose wisely who you will go see. For example, 3 DJs you like are playing right now at 3 different stages and you can only choose one of them to go see.</p>
             </div>
         </div>
         <div class="section" id="concept7">
             <div class="wrapper">
                 <h1 class="title">Concept 7: Labor</h1>
-                <p>Labor is basically the work that people put in to produce a good or service. The amount of labor put in to producing a muysic festival for half a million conert-goers is mind boggling when looking at how they have to set all of the stages, sound, shops, decorations, lighting FX, music production, hire multiple companies, getting sponsors, and managing.</p>
+                <p>The amount of labor put in to producing a music festival for half a million conert-goers is mind boggling when looking at how they have to set all of the stages, sound, shops, decorations, lighting FX, music production, hire multiple companies, getting sponsors, and managing.</p>
             </div>
         </div>
         <div class="section" id="concept8" style="background:rgb(0, 102, 255);">
@@ -113,13 +113,13 @@
             <img src="./src/svg/blue-bottom.svg" class="waveBottom"> -->
             <div class="wrapper">
                 <h1 class="title">Concept 8: Competition</h1>
-                <p>When other firms compete over price, product, promotion, and place. Some competitors to Insomniac (the company who hosts EDC) are Madison Square Garden Entertainment Corp., VER, and Machine Shop. These competitors also host events like EDC and are considered competitors to Insomniac.</p>
+                <p>Some competitors to Insomniac (the company who hosts EDC) are Madison Square Garden Entertainment Corp., VER, and Machine Shop. These competitors also host events like EDC and are considered competitors to Insomniac.</p>
             </div>
         </div>
         <div class="section" id="concept9">
             <div class="wrapper">
                 <h1 class="title">Concept 9: Price Determination</h1>
-                <p>The process of how the forces of demand for goods and services and the supply of goods and services in a market interact to determine the price. This concept applies to EDC Las Vegas through the tickets, merchandise, food, beverages, and nearby hotels. Prices tend to go higher due to the high demand caused by a massive amount of people.</p>
+                <p>This concept applies to EDC Las Vegas through the tickets, merchandise, food, beverages, and nearby hotels. Prices tend to go higher due to the high demand caused by a massive amount of people.</p>
             </div>
         </div>
         <div class="section" id="concept10" style="background:rgb(255, 166, 0);">
@@ -127,7 +127,7 @@
             <img src="./src/svg/orange-bottom.svg" class="waveBottom"> -->
             <div class="wrapper">
                 <h1 class="title">Concept 10: Production</h1>
-                <p>Process by which a producer takes inputs, or factors of production and creates an output. Some inputs are the DJs, staff of shops and the event itself. Without them, there'd be no production at all.</p>
+                <p>Some inputs are the DJs, staff of shops and the event itself. Without them, there'd be no production at all.</p>
             </div>
         </div>
 
