--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li>Playing video games with friends</li>
                 <li>Programming productive things</li>
                 <li>Doom scrolling</li>
-                <li>Making questionable songs on my PC</li>
+                <li>Making questionable "songs"</li>
                 <li>Spending an hour choosing a song and perfecting my 30 second audio snippet for my Instagram notes and stories only for no one to care...</li>
             </ul>
             <h1 id="music">Music</h1>
