--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
             <ul>
                 <li>I go to the gym frequently</li>
                 <li>I did 4 seasons of running sports</li>
-                <li>I've been to a rave (avoided drugs!).</li>
+                <li>I've been to a rave (drugs are a big no-no for me so I stayed away).</li>
                 <li>I make gay jokes with the bros</li>
                 <li>I've pulled before 🗿</li>
-                <li>My type? Latina baddies</li>
+                <li>My type? Latina baddies and goth/mysterious baddies who look like they can destroy my life 🗿🗿🗿🗿</li>
             </ul>
         </div>
     </div>
