--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
     <title>About Me</title>
 </head>
@@ -36,7 +36,7 @@
                 <li>Playing video games with friends</li>
                 <li>Programming productive things</li>
                 <li>Doom scrolling</li>
-                <li>Making questionable "songs"</li>
+                <li>Making questionable songs on my PC</li>
                 <li>Spending an hour choosing a song and perfecting my 30 second audio snippet for my Instagram notes and stories only for no one to care...</li>
             </ul>
             <h1 id="music">Music</h1>
@@ -52,10 +52,9 @@
             <ul>
                 <li>I go to the gym frequently</li>
                 <li>I did 4 seasons of running sports</li>
-                <li>I've been to a rave (drugs are a big no-no for me so I stayed away).</li>
-                <li>I make gay jokes with the bros</li>
                 <li>I've pulled before 🗿</li>
-                <li>My type? Latina baddies and goth/mysterious baddies who look like they can destroy my life 🗿🗿🗿🗿</li>
+                <li>My type? Latina baddies and alt goth/mysterious baddies who look like they can destroy my life 😈</li>
+                <li>I've been to a few different concerts/festivals including Imagine Dragons, Fall Out Boy which were both at the Moda Center, then like 20 artists like SVDDEN DEATH, Kayzo, Marshmello, Deorro, Alison Wonderland, Crankdat, etc.. at Beyond Wonderland PNW, a multi-day festival located at the Gorge Amphitheatre.</li>
             </ul>
         </div>
     </div>
