--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>About Me</title>
 </head>
 <body>
+    <div class="cover">
+        <div class="leftCurtain">
+            <div class="stripe"></div>
+        </div>
+        <div class="rightCurtain">
+            <div class="stripe"></div>
+        </div>
+    </div>
     <div class="topbar">
         <a href="#intro">
             <button>Intro</button>
@@ -35,8 +43,9 @@
                 <li>Listening to music- almost any kind of music passes</li>
                 <li>Playing video games with friends</li>
                 <li>Programming productive things</li>
+                <li>Saying out of pocket shi</li>
                 <li>Doom scrolling</li>
-                <li>Making questionable songs on my PC</li>
+                <li>Making questionable songs</li>
                 <li>Spending an hour choosing a song and perfecting my 30 second audio snippet for my Instagram notes and stories only for no one to care...</li>
             </ul>
             <h1 id="music">Music</h1>
