--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <ul>
                 <li>I go to the gym frequently</li>
                 <li>I did 4 seasons of running sports</li>
+                <li>My type? Joe Mama 💀</li>
                 <li>I've been to a few different concerts/festivals including Imagine Dragons, Fall Out Boy which were both at the Moda Center, then like 20 artists like SVDDEN DEATH, Kayzo, Marshmello, Deorro, Alison Wonderland, Crankdat, etc.. at Beyond Wonderland PNW, a multi-day festival located at the Gorge Amphitheatre.</li>
             </ul>
         </div>
